[package]
name = "codex-mylib"
version = "0.1.0"
authors = ["cchantep <cchantep@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
clap = "2.33.3"
xml-rs = "0.8.3"
time = "0.2.16"
csv = "1.1.3"
base64 = "0.12.3"
reqwest = { "version" = "0.10.8", features = ["blocking"] }
json = "0.12.4"
